--- a/build.gradle
+++ b/build.gradle
@@ -28,8 +28,8 @@ dependencies {
     // Testing
     testImplementation 'org.junit.jupiter:junit-jupiter:5.11.3'
     testImplementation 'org.assertj:assertj-core:3.26.3'
-    implementation 'org.apache.logging.log4j:log4j-core:2.23.1'
-    implementation 'org.apache.logging.log4j:log4j-api:2.23.1'
+    testImplementation 'org.apache.logging.log4j:log4j-core:2.23.1'
+    testImplementation 'org.apache.logging.log4j:log4j-api:2.23.1'
     testImplementation("io.github.hakky54:logcaptor:2.9.3")
 }
 
